--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "and": "^0.0.3",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "swagger-autogen": "^2.23.5",
     "swagger-jsdoc": "^6.2.8",
